syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message WidgetCoolDownData {
	uint32 id = 1;
	uint64 cool_down_time = 2;
	bool is_success = 3;
}
