syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "WidgetCoolDownData.proto";

message WidgetCoolDownNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 4298;
	}

	repeated WidgetCoolDownData group_cool_down_data_list = 1;
	repeated WidgetCoolDownData normal_cool_down_data_list = 2;
}
